--- a/src/app/components/rooms/rooms.component.html
+++ b/src/app/components/rooms/rooms.component.html
@@ -1,8 +1,34 @@
 <h1>Welcome to {{hotelName}} room with number {{roomNumber}} is {{available ?
     "available" : "not availabe"}}</h1>
 
-<div [hidden]="hideRooms">
-    Room Available
+<div *ngIf="rooms.availableRooms> 0">
+    There are {{rooms.availableRooms}} available rooms:
+
+    <div>
+        <table>
+            <tr>
+                <th>Room Number</th>
+                <th>Room Type</th>
+                <th>Room Price</th>
+                <th>Room Photo</th>
+                <th>Room Check In</th>
+                <th>Room Check Out</th>
+            </tr>
+
+            <tr [ngClass]="e ? 'even' : 'odd'" *ngFor="let room of roomList; let
+                e= even; let o= odd ">
+                <td>{{room.roomNumber}}</td>
+                <td>{{room.roomType}}</td>
+                <td>{{room.price}}</td>
+                <td><img src="{{room.photos}}" width="100" height="100" /></td>
+                <td>{{room.checkInDate}}</td>
+                <td>{{room.checkOutDate}}</td>
+            </tr>
+        </table>
+    </div>
 </div>
 
+<div *ngIf="rooms.availableRooms <1">
+    There is no available rooms
+</div>
 <button (click)="toggle()">Toggle</button>
