--- a/src/app/components/rooms/rooms.component.css
+++ b/src/app/components/rooms/rooms.component.css
@@ -1,8 +1,8 @@
 .even {
-    background-color: red;
+    background-color: rgb(233, 190, 190);
     color: white;
 }
 .odd {
-    background-color: yellow;
+    background-color: rgb(119, 205, 190);
     color: white;
 }
