--- a/src/app/components/rooms/rooms.component.html
+++ b/src/app/components/rooms/rooms.component.html
@@ -13,16 +13,18 @@
                 <th>Room Photo</th>
                 <th>Room Check In</th>
                 <th>Room Check Out</th>
+                <th>Room Rating</th>
             </tr>
 
             <tr [ngClass]="e ? 'even' : 'odd'" *ngFor="let room of roomList; let
                 e= even; let o= odd ">
                 <td>{{room.roomNumber}}</td>
-                <td>{{room.roomType}}</td>
-                <td>{{room.price}}</td>
+                <td>{{room.roomType | uppercase}}</td>
+                <td>{{room.price | currency : 'TRY'}}</td>
                 <td><img src="{{room.photos}}" width="100" height="100" /></td>
-                <td>{{room.checkInDate}}</td>
-                <td>{{room.checkOutDate}}</td>
+                <td>{{room.checkInDate | date : 'short'}}</td>
+                <td>{{room.checkOutDate | date : 'short'}}</td>
+                <td>{{room.rating | number : '1.2-3' }} Star</td>
             </tr>
         </table>
     </div>
