--- a/src/app/components/rooms/rooms.component.html
+++ b/src/app/components/rooms/rooms.component.html
@@ -5,7 +5,7 @@
     There are {{rooms.availableRooms}} available rooms:
 
     <div>
-        <table>
+        <table class="table">
             <tr>
                 <th>Room Number</th>
                 <th>Room Type</th>
